performance - post DB training updates